--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>fjffjfjffjjfjf</h1>
    <p>ahahaahahah</p> 
    <img src="mahadi.jpg" alt="">
+   <p>fdfjffkfdjf</p>
+   <p>int the bold</p>
 </body>
 </html>
